[gd_scene load_steps=3 format=3 uid="uid://mxx7wbwfml8f"]

[ext_resource type="Script" uid="uid://bwj5rm18ka14o" path="res://src/dev.gd" id="1_htl6o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htl6o"]
bg_color = Color(0.25, 0.25, 0.25, 0.784314)

[node name="Dev" type="Control" node_paths=PackedStringArray("MainTab", "SlotTexture_OptBx", "Timer_Second", "TileLbl", "TileSize_X_SpnBx", "TileSize_Y_SpnBx", "TileSize_X_HSldr", "TileSize_Y_HSldr", "TileSize_Lock_ChkBx", "GridOrigin_X_SpnBx", "GridOrigin_Y_SpnBx", "GridOrigin_X_HSldr", "GridOrigin_Y_HSldr", "TileGap_X_SpnBx", "TileGap_Y_SpnBx", "TileGap_X_HSldr", "TileGap_Y_HSldr", "TileGap_Lock_ChkBx", "AddTile_Btn", "RemoveTile_Btn", "SaveGrid_Btn", "LoadGrid_Btn", "DeleteGrid_Btn", "PopulateGrid_Btn", "TileSelect_X_SpnBx", "TileSelect_Y_SpnBx", "GridList_OptBx", "NewGrid_TxtBx", "ClearGrid_Btn", "Dropper_OptBx")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_htl6o")
MainTab = NodePath("TabContainer")
SlotTexture_OptBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer/SlotTexture_OptBx")
Timer_Second = NodePath("Timer_Sec")
TileLbl = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/MainTile_Lbl")
TileSize_X_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2/TileSize_X_SpnBx")
TileSize_Y_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3/TileSize_Y_SpnBx")
TileSize_X_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2/TileSize_X_HSldr")
TileSize_Y_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3/TileSize_Y_HSldr")
TileSize_Lock_ChkBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer/TileSize_Lock_ChkBx")
GridOrigin_X_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB/GridOrigin_X_SpnBx")
GridOrigin_Y_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB/GridOrigin_Y_SpnBx")
GridOrigin_X_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB/GridOrigin_X_HSldr")
GridOrigin_Y_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB/GridOrigin_Y_HSldr")
TileGap_X_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2/TileGap_X_SpnBx")
TileGap_Y_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3/TileGap_Y_SpnBx")
TileGap_X_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2/TileGap_X_HSldr")
TileGap_Y_HSldr = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3/TileGap_Y_HSldr")
TileGap_Lock_ChkBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer/TileGap_Lock_ChkBx")
AddTile_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/AddTile_Btn")
RemoveTile_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/RemoveTile_Btn")
SaveGrid_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/SaveGrid_Btn")
LoadGrid_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/LoadGrid_Btn")
DeleteGrid_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/DeleteGrid_Btn")
PopulateGrid_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/PopulateGrid_Btn")
TileSelect_X_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/TileSelect_X_SpnBx")
TileSelect_Y_SpnBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/TileSelect_Y_SpnBx")
GridList_OptBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/GridList_OptBx")
NewGrid_TxtBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer4/NewGrid_TxtBx")
ClearGrid_Btn = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer5/ClearGrid_Btn")
Dropper_OptBx = NodePath("TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer2/DropperType_OptBx")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
offset_right = 325.0
offset_bottom = 31.0
mouse_filter = 0
theme_override_constants/outline_size = 5
theme_override_constants/side_margin = 5
theme_override_styles/panel = SubResource("StyleBoxFlat_htl6o")
current_tab = 0
clip_tabs = false
deselect_enabled = true

[node name="Grid" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Grid"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Tiles_HB" type="VBoxContainer" parent="TabContainer/Grid/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MainTile_Lbl" type="Label" parent="TabContainer/Grid/VBoxContainer/Tiles_HB"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Tiles"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
text = "Slot Texture"

[node name="SlotTexture_OptBx" type="OptionButton" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
text = "Size"

[node name="TileSize_Lock_ChkBx" type="CheckBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
button_pressed = true
text = "Lock"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="TileSize_X_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
min_value = 8.0
max_value = 256.0
value = 99.0
prefix = "X:"
custom_arrow_step = 1.0

[node name="TileSize_X_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 8.0
max_value = 256.0
value = 8.0

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="TileSize_Y_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3"]
layout_mode = 2
min_value = 8.0
max_value = 256.0
value = 99.0
prefix = "Y:"
custom_arrow_step = 1.0

[node name="TileSize_Y_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 8.0
max_value = 256.0
value = 8.0

[node name="VBoxContainer3" type="VBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
text = "Gap"

[node name="TileGap_Lock_ChkBx" type="CheckBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
button_pressed = true
text = "Lock"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3"]
layout_mode = 2

[node name="TileGap_X_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
max_value = 64.0
value = 8.0
prefix = "X:"
custom_arrow_step = 1.0

[node name="TileGap_X_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 64.0

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3"]
layout_mode = 2

[node name="TileGap_Y_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3"]
layout_mode = 2
max_value = 64.0
value = 8.0
prefix = "Y:"
custom_arrow_step = 1.0

[node name="TileGap_Y_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 64.0

[node name="HSeparator" type="HSeparator" parent="TabContainer/Grid/VBoxContainer/Tiles_HB"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Grid Edit"
horizontal_alignment = 1

[node name="PopulateGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Populate Grid"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RemoveTile_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "[-] Remove"

[node name="TileSelect_X_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -50.0
max_value = 50.0
prefix = "X:"

[node name="TileSelect_Y_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -50.0
max_value = 50.0
prefix = "Y:"

[node name="AddTile_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add [+]"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DropperType_OptBx" type="OptionButton" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Update Dropper"

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="SaveGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[node name="GridList_OptBx" type="OptionButton" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 6
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="LoadGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Load"

[node name="DeleteGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Delete"

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="NewGrid_TxtBx" type="TextEdit" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "New Grid Name"
scroll_fit_content_height = true

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ClearGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
text = "[ x ] Clear Full Grid [ x ]"

[node name="PrintGrid_Btn" type="Button" parent="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 4
text = "[ ? ] Print Grid"

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Grid/VBoxContainer"]
layout_mode = 2

[node name="Grid_Origin" type="VBoxContainer" parent="TabContainer/Grid/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Grid_Origin"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Grid Origin"
horizontal_alignment = 1

[node name="Btn_GridOrigin_Center" type="Button" parent="TabContainer/Grid/VBoxContainer/Grid_Origin"]
layout_mode = 2
size_flags_horizontal = 4
text = "Screen Center"

[node name="GridOrigin_X_HB" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Grid_Origin"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB"]
layout_mode = 2
text = "X"

[node name="GridOrigin_X_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB"]
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
custom_arrow_step = 1.0

[node name="GridOrigin_X_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -1000.0
max_value = 1000.0

[node name="GridOrigin_Y_HB" type="HBoxContainer" parent="TabContainer/Grid/VBoxContainer/Grid_Origin"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB"]
layout_mode = 2
text = "Y"

[node name="GridOrigin_Y_SpnBx" type="SpinBox" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB"]
layout_mode = 2
min_value = -1000.0
max_value = 1000.0
custom_arrow_step = 1.0

[node name="GridOrigin_Y_HSldr" type="HSlider" parent="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -1000.0
max_value = 1000.0

[node name="Game" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Game"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Game/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 5
text = "Gems"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Game/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RemoveGem_Btn" type="Button" parent="TabContainer/Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "[-] Remove"

[node name="Gem_X_SpnBx" type="SpinBox" parent="TabContainer/Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -50.0
max_value = 50.0
prefix = "X:"

[node name="Gem_Y_SpnBx" type="SpinBox" parent="TabContainer/Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -50.0
max_value = 50.0
prefix = "Y:"

[node name="AddGem_Btn" type="Button" parent="TabContainer/Game/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Add [+]"

[node name="Timer_Sec" type="Timer" parent="."]
autostart = true

[connection signal="item_selected" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer/SlotTexture_OptBx" to="." method="_on_slot_texture_opt_bx_item_selected"]
[connection signal="toggled" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer/TileSize_Lock_ChkBx" to="." method="_on_chk_bx_tile_size_lock_toggled"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2/TileSize_X_SpnBx" to="." method="_on_spn_bx_tile_size_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer2/TileSize_X_HSldr" to="." method="_on_h_sldr_tile_size_x_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3/TileSize_Y_SpnBx" to="." method="_on_spn_bx_tile_size_y_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer/HBoxContainer3/TileSize_Y_HSldr" to="." method="_on_h_sldr_tile_size_y_value_changed"]
[connection signal="toggled" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer/TileGap_Lock_ChkBx" to="." method="_on_tile_gap_lock_chk_bx_toggled"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2/TileGap_X_SpnBx" to="." method="_on_tile_gap_x_spn_bx_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer2/TileGap_X_HSldr" to="." method="_on_tile_gap_x_h_sldr_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3/TileGap_Y_SpnBx" to="." method="_on_tile_gap_y_spn_bx_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/HBoxContainer2/VBoxContainer3/HBoxContainer3/TileGap_Y_HSldr" to="." method="_on_tile_gap_y_h_sldr_value_changed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/PopulateGrid_Btn" to="." method="_on_populate_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/RemoveTile_Btn" to="." method="_on_remove_tile_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer/AddTile_Btn" to="." method="_on_add_tile_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer2/Button" to="." method="_on_update_dropper_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/SaveGrid_Btn" to="." method="_on_save_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/LoadGrid_Btn" to="." method="_on_load_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer3/DeleteGrid_Btn" to="." method="_on_delete_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer5/ClearGrid_Btn" to="." method="_on_clear_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Tiles_HB/VBoxContainer/HBoxContainer5/PrintGrid_Btn" to="." method="_on_print_grid_btn_pressed"]
[connection signal="pressed" from="TabContainer/Grid/VBoxContainer/Grid_Origin/Btn_GridOrigin_Center" to="." method="_on_btn_grid_origin_center_pressed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB/GridOrigin_X_SpnBx" to="." method="_on_grid_origin_x_spn_bx_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_X_HB/GridOrigin_X_HSldr" to="." method="_on_grid_origin_x_h_sldr_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB/GridOrigin_Y_SpnBx" to="." method="_on_grid_origin_y_spn_bx_value_changed"]
[connection signal="value_changed" from="TabContainer/Grid/VBoxContainer/Grid_Origin/GridOrigin_Y_HB/GridOrigin_Y_HSldr" to="." method="_on_grid_origin_y_h_sldr_value_changed"]
